# Mikezerobot

./: .replit  Dockerfile  README.md  bot.py  bump_task.py  config.py  keep_alive.py  main.py  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  server_pet_cog_buttons.py  start.sh
attached_assets/: Pasted-import-discord-from-discord-ext-import-commands-tasks-from-discord-ui-import-Button-View-import-1752243961230_1752243961230.txt
cogs/: __init__.py  anon_consult.py  anonymous_vc_vote.py  anonymous_vote.py  bump_reminder.py  checkin_bot.py  creategroup.py  daily_quote.py  erver_pet_cog_buttons.py  event_attendance.py  event_checkin.py  exit_handler.py  exportlog.py  haihai  helpme.py  join_sound.py  monthly_category.py  monthly_category2.py  monthly_category3.py  mystery_game.py  otoshidama.py  private_channel_creator.py  recorder.py  restart.py  server_pet_channel_cog.py  server_pet_cog.py  server_pet_cog_buttons.py  session_reset.py  set_VC  setup_secret.py  setupvc.py  shutdown.py  template_keeper.py  thread_buttons.py  vc_notify.py  vctimer.py  vote.py
data/: 2015-08-10_test名.csv  mysteries.json  pets.json
data/attendance_records/: 新規 テキスト ドキュメント.txt
utils/: __init__.py
